Added: * support for arrows up and down to move the scroll bar and content along. This behavior is by default and uses a different HTML markup that includes the arrows. * demo with arrows.

--- a/README
+++ b/README
@@ -1,1 +1,7 @@
-See http://www.baijs.nl/tinyscrollbar/
+See http://www.baijs.nl/tinyscrollbar/ for official tinyscrollbar website.
+
+This fork has support for up and down arrows.
+
+Please view demo.html to see how you can use the arrows in your project.
+
+Built for VoDoo Solutions http://www.vodoosolutions.com
